src/objects/Consumer__c.object
<CustomObject>
    <description>Holds Information specific to consumers, residential B2C customers.</description>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Term of Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract</relationshipLabel>
        <relationshipName>Consumer_contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coverage_Check_Result__c</fullName>
        <label>Coverage Check Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>External_Status_Check</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Check_Result__c</fullName>
        <label>Credit Check Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>External_Status_Check</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Name</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Contact</relationshipLabel>
        <relationshipName>Consumer_contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_State__c</fullName>
        <description>Current state for the customer</description>
        <label>Customer State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Booking__c</fullName>
        <label>Installation Booking</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Consumers</relationshipLabel>
        <relationshipName>Consumers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Consumers</relationshipLabel>
        <relationshipName>Consumers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <description>UK Code code in format XX99 9XX</description>
        <label>Postcode</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Consumers</relationshipLabel>
        <relationshipName>Consumers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Consumer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Customer_State__c</columns>
        <columns>NAME</columns>
        <columns>Postcode__c</columns>
        <columns>Product__c</columns>
        <columns>Contract_Term__c</columns>
        <columns>Installation_Booking__c</columns>
        <columns>Special_Instructions__c</columns>
        <columns>Lead__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consumers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>isValidPostcode</fullName>
        <active>true</active>
        <description>Valid UK Postcode.</description>
        <errorConditionFormula>NOT(
	OR(
		ISBLANK( Postcode__c ),
		REGEX( Postcode__c , &quot;[a-zA-Z]\\d\\s\\d[a-zA-Z]{2}&quot;),
		REGEX( Postcode__c , &quot;[a-zA-Z]\\d\\d\\s\\d[a-zA-Z]{2}&quot;),
		REGEX( Postcode__c , &quot;[a-zA-Z]{2}\\d\\s\\d[a-zA-Z]{2}&quot;),
		REGEX( Postcode__c , &quot;[a-zA-Z]{2}\\d\\d\\s\\d[a-zA-Z]{2}&quot;),
		REGEX( Postcode__c , &quot;[a-zA-Z]{2}\\d[a-zA-Z]\\s\\d[a-zA-Z]{2}&quot;),
		REGEX( Postcode__c , &quot;[a-zA-Z]\\d[a-zA-Z]\\s\\d[a-zA-Z]{2}&quot;)
	)
)</errorConditionFormula>
        <errorDisplayField>Postcode__c</errorDisplayField>
        <errorMessage>The postcode must be valid UK format of the form XX99 9XX</errorMessage>
    </validationRules>
</CustomObject>